@@ -13,6 +13,7 @@ Version 6.4.16
     beendet wird.
   - Bugfix: Memory-Leak in der Restschnittstelle behoben
   - Bugfix: Memory-Leak im Zusammenhang mit MySQL gefixt
+  - Überflüssige Variablen in Trim-Funktionen der CWString entfernt
 
 Version 6.4.15 vom 30.04.2013	(SVN-Tag: REL_6_4_15)
   - CLog-Klasse unterstützt nun Syslog
